--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "author": "timeo",
   "license": "ISC",
   "dependencies": {
-    "@realply/linkedin-posts": "^1.7.1",
+    "@realply/linkedin-posts": "^1.7.2",
     "@xenova/transformers": "^2.16.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
