--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     // "include": ["src/**/*.ts", "server.ts"]
     // ... any other files or directories you want to include
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules"]
 }
