--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon dist/server.js",
-    "start:local": "nodemon server.js",
+    "start:local": "node server.js",
     "start": "vercel",
     "production": "vercel --prod",
     "if-ts-build": "tsc -outDir dist"
@@ -16,6 +16,7 @@
   "dependencies": {
     "@realply/linkedin-posts": "^1.7.2",
     "@xenova/transformers": "^2.16.0",
+    "cors": "^2.8.5",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   },
