--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon dist/server.js",
-    "start:local": "node server.js",
-    "start": "vercel",
+    "start": "node server.js",
     "production": "vercel --prod",
     "if-ts-build": "tsc -outDir dist"
   },
