--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@realply/linkedin-posts": "^1.7.2",
     "@xenova/transformers": "^2.16.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   },
