--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon dist/server.js",
-    "start": "node server.js",
+    "start": "node app.js",
     "production": "vercel --prod",
     "if-ts-build": "tsc -outDir dist"
   },
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vercel": "^33.5.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
