--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "http": "^0.0.1-security",
     "nodemon": "^3.1.0",
+    "querystring": "^0.2.1",
+    "url": "^0.11.3",
     "uuid": "^9.0.1",
     "vercel": "^33.5.5"
   },
